src/objects/Case_Swarm_Rule__c.object
<CustomObject>
    <description>A rule indicating what users should auto-follow a Case in Chatter.</description>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <label>Case Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_on_Swarm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You will receive a Chatter message if you automatically follow a record.</inlineHelpText>
        <label>Notify on Swarm?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>123123</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Cases</fullName>
                </value>
                <value>
                    <fullName>Only Cases for Accounts I Own</fullName>
                </value>
                <value>
                    <fullName>Only Cases with a certain Status</fullName>
                </value>
                <value>
                    <fullName>Only Cases with a certain Priority</fullName>
                </value>
                <value>
                    <fullName>Only Cases of a certain Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Swarm_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Swarm Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSR-{0000}</displayFormat>
        <label>Case Swarm Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Swarm Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>